fixed theme picker spacing

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -103,7 +103,7 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   bottom: 0;
   }
 
-#cp-content .innerframe form, .view-display-id-page_1 {
+#cp-content .innerframe form, .view-display-id-page_1, .views-processed {
   margin: 30px;
   }
 
@@ -117,7 +117,8 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
 
 .help {
   margin-left: 5px;
-  margin-top: 5px;
+  margin-top: 12px;
+  position: absolute;
   }
 
 .views-admin-links {
