--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -2,6 +2,7 @@
 
 fieldset {
   clear: both;
+  padding: 0;
   }
 
 .vertical-tabs fieldset {
